[gd_scene load_steps=7 format=3 uid="uid://bigkvo232ino0"]

[ext_resource type="Script" path="res://assets/scripts/gui.gd" id="1_lbia4"]
[ext_resource type="FontFile" uid="uid://dj35bpt60t8pd" path="res://assets/ARCADE_I.TTF" id="2_n5ke7"]
[ext_resource type="PackedScene" uid="uid://dxmiyi1uuryp1" path="res://scenes/objects/heart.tscn" id="3_ao4bo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38s8a"]
bg_color = Color(0, 0, 0, 0.627451)

[sub_resource type="Animation" id="Animation_v867g"]
resource_name = "blink"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1mxv5"]
_data = {
"blink": SubResource("Animation_v867g")
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_lbia4")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -21.5
offset_right = 84.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2

[node name="p1_wins" type="Label" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.890196, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_n5ke7")
theme_override_font_sizes/font_size = 56
text = "player 1 wins"

[node name="Panel" type="Panel" parent="CenterContainer/p1_wins"]
show_behind_parent = true
layout_mode = 0
offset_left = -1.5
offset_right = 38.5
offset_bottom = 40.0
scale = Vector2(17.84, 1.36)
theme_override_styles/panel = SubResource("StyleBoxFlat_38s8a")

[node name="p2_wins" type="Label" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0.254902, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_n5ke7")
theme_override_font_sizes/font_size = 56
text = "player 2 wins"

[node name="Panel" type="Panel" parent="CenterContainer/p2_wins"]
show_behind_parent = true
layout_mode = 0
offset_left = -1.5
offset_right = 38.5
offset_bottom = 40.0
scale = Vector2(17.84, 1.36)
theme_override_styles/panel = SubResource("StyleBoxFlat_38s8a")

[node name="Label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.5
offset_top = -142.26
offset_right = 77.5
offset_bottom = -111.26
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_n5ke7")
text = "press start to reset"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
libraries = {
"": SubResource("AnimationLibrary_1mxv5")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 170
alignment = 1

[node name="p1_meter" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.890196, 1)
theme_override_fonts/font = ExtResource("2_n5ke7")
theme_override_font_sizes/font_size = 36
text = "0"
vertical_alignment = 2

[node name="p2_meter" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0.254902, 1)
theme_override_fonts/font = ExtResource("2_n5ke7")
theme_override_font_sizes/font_size = 36
text = "0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 45
alignment = 1

[node name="p1_stock" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
modulate = Color(0, 1, 0.890196, 1)
layout_mode = 2

[node name="heart" parent="MarginContainer/VBoxContainer/HBoxContainer2/p1_stock" instance=ExtResource("3_ao4bo")]
layout_mode = 2

[node name="heart2" parent="MarginContainer/VBoxContainer/HBoxContainer2/p1_stock" instance=ExtResource("3_ao4bo")]
layout_mode = 2

[node name="heart3" parent="MarginContainer/VBoxContainer/HBoxContainer2/p1_stock" instance=ExtResource("3_ao4bo")]
layout_mode = 2

[node name="p2_stock" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 0, 0.254902, 1)
layout_mode = 2

[node name="heart" parent="MarginContainer/VBoxContainer/HBoxContainer2/p2_stock" instance=ExtResource("3_ao4bo")]
layout_mode = 2

[node name="heart2" parent="MarginContainer/VBoxContainer/HBoxContainer2/p2_stock" instance=ExtResource("3_ao4bo")]
layout_mode = 2

[node name="heart3" parent="MarginContainer/VBoxContainer/HBoxContainer2/p2_stock" instance=ExtResource("3_ao4bo")]
layout_mode = 2
